# cpp-huffman

./: .gitignore  CMakeLists.txt  cli.cpp  huffman_testing.cpp
huffman/: tree.cpp  tree.hpp
lib/: huffman.cpp  huffman.hpp
